# ratemyhooptie

./: .gitignore  LICENSE  README.md  hooptie.py  pyproject.toml  requirements.txt
src/ratemyhooptie/: __init__.py  hooptie.py
tests/: conftest.py  test_hooptie.py
tests/testResources/: test.txt
