[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratemyhooptie"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nathan Pemberton", email = "nathantpemberton@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

# The specific versions of PyQt is due to a bug in 6.7.1 that breaks the camera
# backend. This will eventually be fixed and we can try to remove the
# restriction.
dependencies = [
    "opencv-python",
    "openai",
    "pillow",
    "PyQt6==6.7.0",
    "PyQt6-Qt6==6.7.0",
]

[project.urls]
Documentation = "https://github.com/Nathan Pemberton/ratemyhooptie#readme"
Issues = "https://github.com/Nathan Pemberton/ratemyhooptie/issues"
Source = "https://github.com/Nathan Pemberton/ratemyhooptie"

[project.scripts]
ratemyhooptie = "ratemyhooptie.hooptie:main"

[tool.hatch.version]
path = "src/ratemyhooptie/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ratemyhooptie tests}"

[tool.coverage.run]
source_pkgs = ["ratemyhooptie", "tests"]
branch = true
parallel = true
omit = [
  "src/ratemyhooptie/__about__.py",
]

[tool.coverage.paths]
ratemyhooptie = ["src/ratemyhooptie", "*/ratemyhooptie/src/ratemyhooptie"]
tests = ["tests", "*/ratemyhooptie/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
